2004-12-28  Damien Sandras  <dsandras@gnome.org>

	* src/connection.cpp: Fixed #162391.

2004-12-28  Damien Sandras  <dsandras@gnome.org>

	* C/gnomemeeting.xml, fr/gnomemeeting.xml: Changed host:[port] into
	host[:port] thanks to Hugh Daniel.

2004-12-26  Miguel Rodriguez Perez  <miguelrp@gmail.com>

	* po/es.po
	* src/callbacks.cpp (about_callback): 
	* src/tray.cpp: 
	* src/config.cpp: 
	* src/pref_window.cpp: 
	* AUTHORS (Contributors): Change my email address to the one in gmail.

	* lib/contacts/Makefile.am (INCLUDES): Add GNOMEMEETING_CFLAGS so
	that it can be compiled with pwlib installed ouside of /usr.

2004-12-24  Damien Sandras  <dsandras@gnome.org>

	* src/callbacks.cpp: Fixed about dialog.

	* src/endpoint.cpp: Do take a lock on the connection when reading the
	volume from the device as it is already done and unnecessary.

	* NEWS: Updated with CVS NEWS.
	
2004-12-22  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.service.in, src/dbus_component.cpp, 
	src/dbus_component.h: Fixed leaks thanks to Julien.

2004-12-22  Damien Sandras  <dsandras@gnome.org>

	* src/log_window.cpp, src/main_window.cpp: Applied UI fixes provided
	by Eskil Bylund <eskil_bylund@fastmail.fm>.

2004-12-22  Damien Sandras  <dsandras@gnome.org>

	* help/C/gnomemeeting-C.omf help/fr/gnomemeeting-fr.omf: Fixed
	relation serie id thanks to SUN (Maeve Anslow) and Christopher Warner. 

2004-12-13 Kilian Krause <kk@verfaction.de>

	* lib/gtk-text-tag-addon.h, lib/gtk-text-buffer-addon.c: Fixed
	compilation on FreeBSD. Fix by Roger Hardiman <roger@freebsd.org>.
	Thanks!

2004-12-06  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp, lib/contacts/gm_contacts-ldap.cpp:
	Fixed warnings, thanks Kilian!

2004-12-05  Damien Sandras  <dsandras@gnome.org>
	
	* configure.in: 1.2 release guys and gals!
	
2004-12-02  Damien Sandras  <dsandras@gnome.org>

	* Makefile.am: Fixed EXTRA_DIST to contain the list of marshallers.
