@@ -1149,10 +1149,12 @@ gm_mw_init_menu (GtkWidget *main_window)
 		     GTK_SIGNAL_FUNC (zoom_normal_changed_cb),
 		     (gpointer) VIDEO_DISPLAY_KEY "zoom_factor", FALSE),
 
+#ifdef HAS_SDL
       GTK_MENU_ENTRY("fullscreen", _("Fullscreen"), _("Switch to fullscreen"), 
 		     GTK_STOCK_ZOOM_IN, 'f', 
 		     GTK_SIGNAL_FUNC (fullscreen_changed_cb),
 		     (gpointer) main_window, FALSE),
+#endif
 
       GTK_MENU_NEW(_("_Tools")),
       
@@ -1653,10 +1655,12 @@ gm_mw_video_window_new (GtkWidget *main_window,
 		     GTK_SIGNAL_FUNC (zoom_normal_changed_cb),
 		     (gpointer) VIDEO_DISPLAY_KEY "local_zoom_factor", TRUE),
 
+#ifdef HAS_SDL
       GTK_MENU_ENTRY("fullscreen", _("Fullscreen"), _("Switch to fullscreen"), 
 		     GTK_STOCK_ZOOM_IN, 'f', 
 		     GTK_SIGNAL_FUNC (fullscreen_changed_cb),
 		     (gpointer) main_window, TRUE),
+#endif
 
       GTK_MENU_END
   };
@@ -1676,10 +1680,12 @@ gm_mw_video_window_new (GtkWidget *main_window,
 		     GTK_SIGNAL_FUNC (zoom_normal_changed_cb),
 		     (gpointer) VIDEO_DISPLAY_KEY "remote_zoom_factor", TRUE),
 
+#ifdef HAS_SDL
       GTK_MENU_ENTRY("fullscreen", _("Fullscreen"), _("Switch to fullscreen"), 
 		     GTK_STOCK_ZOOM_IN, 'f', 
 		     GTK_SIGNAL_FUNC (fullscreen_changed_cb),
 		     (gpointer) main_window, TRUE),
+#endif
 
       GTK_MENU_END
   };
