@@ -1,3 +1,9 @@
+2005-01-04  Miguel Rodríguez Pérez  <miguelrp@gmail.com>
+
+	* src/main_window.cpp (gm_mw_init_menu, gm_mw_video_window_new):
+	Don't create an entry in the manus to switch to fullscreen if
+	SDL is not available at compile time.
+
 2004-12-28  Damien Sandras  <dsandras@gnome.org>
 
 	* src/connection.cpp: Fixed #162391.
